# omnimcp-github-cli

./: .env_copy  .gitignore  .justfile  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
src/omnimcp_be/: main.py  setting.py
src/omnimcp_be/mcp/server/: repo_manager.py
src/omnimcp_be/util/: github_util.py
